# dynamicForm

./: .gitignore  AppStyles移至Common说明.md  CMakeLists.txt  FormGenerator改进计划.md  GridPreview高度问题修复_20251119.md  PROJECT_STRUCTURE.md  QML与C++性能对比分析.md  Qt学习分享会-学习路线图.md  README.md  form_config.json  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  showMessage统一说明.md  临时存储和验证状态管理说明.md  事件覆盖问题修复方案.md  使用手册说明.md  动态表单系统使用手册_v3.md  动态表单系统完整使用手册.md  动态表单系统完整使用手册_clean.md  动态表单系统完整使用手册_old_with_encoding_issues.md  动态表单系统完整使用手册_v5.md  动态表单系统核心概念_补充.md  当前改进进度.md  快速开始_拖拽式设计器.md  快速测试指南.md  手册内容整合说明.md  手册更新总结_20251119.md  手册更新总结_20251119_v2.md  技术栈协作图.md  拖拽式表单生成器使用说明.md  按钮配置测试.md  控件配置数据字典更新说明.md  控件验证状态查询使用指南.md  数据库访问层类图.md  数据记录查询功能说明.md  更新日志_拖拽式表单生成器.md  最终优化总结.md  最终修复总结_20251118_v2.md  (+17 more)
QML教程/: 02-布局系统详解.md  03-信号与槽机制.md  05-动画与过渡.md  06-项目实战-动态表单系统.md  08-可视化概念图解.md  09-学习资源大全.md  PPT版-02-布局系统对比.md  PPT版-03-信号与动画.md  PPT版-09-实战项目图解.md  README.md
QML教程 - 副本/: 00-教程总览.md  01-QML基础入门.md  04-JavaScript集成.md  07-趣味示例集合.md  PPT版-01-QML核心概念.md  PPT版-04-实战案例图解.md  PPT版-08-组件组合与父子访问.md  PPT版-10-美观图表与资源大全.md  PPT版-README.md
generator/: CodeGenerator.cpp  CodeGenerator.h
mysql/MySqlConnectionManager/: MySqlConnectionManager.cpp  MySqlConnectionManager.h
mysql/MySqlHelper/: MySqlHelper.cpp  MySqlHelper.h
qml/: Home.qml  main.qml
qml/Common/: AppStyles.qml  MessageManager.qml  qmldir
qml/components/: StyledBase.qml  StyledButton.qml  StyledComboBox.qml  StyledDateTime.qml  StyledLabel.qml  StyledRow.qml  StyledSpinBox.qml  StyledTextField.qml  components.json
qml/config/: ComponentConfig.js  ConfigEditor.qml  ConfigEditor_test.qml  ConfigManager.qml  ControlConfigItem.qml  ControlToolbar.qml  ControlTypeEditor.qml  ControlTypeManager.qml  FINAL_FIXES.md  FIXES_APPLIED.md  GridConfigPanel.qml  GridPreview.qml  README.md  SIGNAL_CONNECTION_FIX.md  TEST_FIXES.md  TROUBLESHOOTING.md  USER_GUIDE.md  qmldir
qml/config/dialog/: BasicPropertiesPanel.qml  ControlEditDialog.qml  EventConfigPanel.qml  FunctionHelpDialog.qml  FunctionHelpDialog_old.qml  ValidationPanel.qml
qml/config/managers/: ConfigManager.qml  ControlTypeManager.qml
qml/config/panels/: ControlToolbar.qml  GridConfigPanel.qml  GridPreview.qml
qml/core/: FormAPI.qml  ScriptEngine.qml
qml/database/: DbTableList.qml  GenEdit.qml
qml/dynamic/: dataRecordList.qml  dynamicList.qml
qml/generator/: CanvasItem.qml  CodeGenerator.qml  DraggableComponent.qml  FormGenerator.qml  FormGeneratorLogic.js  PropertyEditor.qml  qmldir
qml/generator/canvas/: CanvasItem.qml
qml/generator/json/: FormSerializer.js
qml/generator/logic/: FormGeneratorLogic.js
qml/generator/properties/: CollapsePanel.qml  ComponentSection.qml  ContainerSection.qml  (+4 more)
qml/mysqlhelper/: MySqlHelper.qml  qmldir
qml/render/: ControlFactory.qml  FormPreview.qml  jin.js
qml/utils/: FileHelper.qml  qmldir
templates/: Controller.cpp.tpl  Controller.h.tpl  Edit.qml.tpl  Entity.cpp.tpl  Entity.h.tpl  List.qml.tpl
utils/: FileHelper.cpp  FileHelper.h
